@@ -1,4 +1,5 @@
 0.2.4
+Added 'Add to Custom Word List" to popup when text is selected.
 Added 'Check For Updates' option to prefs.
 Added support for custom word completions.
 Redone prefs dialog.
